--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 
 upstream uwsgi {
-    server project_name_backend:8000;
+    server project_name:8000;
 }
 
 server {
@@ -13,6 +13,7 @@ server {
         autoindex on;
         alias /project/static;
     }
+    
     location /media {
         autoindex on;
         alias /project/media;
