--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,8 +1,8 @@
-version: "3.6"
+version: "3.9"
 services:
 
   backend:
-    container_name: project_name_backend
+    container_name: project_name
     build: ./project_name
     command: python3 manage.py runserver 0.0.0.0:8000
     env_file:
